feat(docker): Add docker workflow

--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -1,1 +1,11 @@
 ---
+name: Docker workflow
+'on':
+  pull_request:
+  push:
+    branches:
+      - main
+
+jobs:
+  docker-lint:
+    uses: ./.github/workflows/dockerLint-job.yml
