--- a/.github/workflows/yamlLint.yml
+++ b/.github/workflows/yamlLint.yml
@@ -2,6 +2,10 @@
 name: YAML Linter
 'on':
   workflow_call:
+    inputs:
+      yamlPath:
+        required: true
+        type: string
 
 jobs:
   lint:
@@ -21,4 +25,4 @@ jobs:
 
       - name: Lint code
         run: |
-          yamllint .
+          yamllint ${{ inputs.yamlPath }}
