--- a/.github/workflows/uploadMetadata.yml
+++ b/.github/workflows/uploadMetadata.yml
@@ -14,7 +14,7 @@ job:
           echo "name=foo" >> .artifacts/metadata.sh
           echo "version=0.0.0" >> .artifacts/metadata.sh
       - name: Upload Metadata
-        uses: GrabAByte/github-devops-workflows/.github/workflows/uploadArtifact.yml@feat/inputs
+        uses: GrabAByte/github-devops-workflows/.github/workflows/uploadArtifact.yml@feat/shareVars
           with:
             artifact: metadata.sh
             path: metadata
