--- a/.github/workflows/uploadMetadata.yml
+++ b/.github/workflows/uploadMetadata.yml
@@ -7,7 +7,7 @@ name: Upload Metadata
         required: true
         type: string
       path:
-        require: true
+        required: true
         type: string
 
 jobs:
