--- a/.github/workflows/downloadArtifact.yml
+++ b/.github/workflows/downloadArtifact.yml
@@ -9,9 +9,15 @@ name: Download Artifact
 
 job:
   downloadArtifact:
+    name: Download Artifact
     runs-on: ubuntu-latest
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v1
         with:
           name: ${{ inputs.artifact }}
+      - name: Source Metadata
+        run: |
+          source ${{ inputs.artifact }}
+          echo $name
+          echo $version
