--- a/.github/workflows/downloadArtifact.yml
+++ b/.github/workflows/downloadArtifact.yml
@@ -6,6 +6,9 @@ name: Download Artifact
       artifact:
         required: true
         type: string
+      path:
+        required: true
+        type: string
 
 jobs:
   downloadArtifact:
