--- a/.github/workflows/uploadMetadata.yml
+++ b/.github/workflows/uploadMetadata.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
       - name: Output metadata to artifact
         run: |
+          find . -type f
           if [ ! -d ${{ inputs.path }} ]; then
             mkdir ${{ inputs.path }}
           fi
