--- a/.github/workflows/downloadArtifact.yml
+++ b/.github/workflows/downloadArtifact.yml
@@ -15,11 +15,15 @@ jobs:
     name: Download Artifact
     runs-on: ubuntu-latest
     steps:
+      - name: Check out the codebase.
+        uses: actions/checkout@v2
+
       - name: Download artifact
         uses: actions/download-artifact@v1
         with:
           name: ${{ inputs.artifact }}
           path: ${{ inputs.path }}
+
       - name: Read Metadata
         run: |
           cat ${{ inputs.path }}/${{ inputs.artifact }}
