--- a/.github/workflows/dockerLint.yml
+++ b/.github/workflows/dockerLint.yml
@@ -17,4 +17,5 @@ jobs:
 
       - name: Lint Dockerfile
         run: |
-          docker run --rm -i -v ${PWD}/.hadolint.yml:/.hadolint.yml hadolint/hadolint < ${{ inputs.dockerfilePath }}
+          docker run --rm -i -v ${PWD}/.hadolint.yml:/.hadolint.yml hadolint/hadolint < ${{ inputs.dockerfilePath }} && \
+        echo "Docking Linting: Passed
