--- a/.github/workflows/readMetadata.yml
+++ b/.github/workflows/readMetadata.yml
@@ -1,9 +1,9 @@
 ---
-name: Download Artifact
+name: Read Metadata
 'on':
   workflow_call:
     inputs:
-      artifact:
+      file:
         required: true
         type: string
       path:
@@ -11,19 +11,19 @@ name: Download Artifact
         type: string
 
 jobs:
-  downloadArtifact:
-    name: Download Artifact
+  read-metadata:
+    name: Read Metadata
     runs-on: ubuntu-latest
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v2
 
-      - name: Download artifact
+      - name: Download file
         uses: actions/download-artifact@v1
         with:
-          name: ${{ inputs.artifact }}
-          path: ${{ inputs.path }}
+          name: ${{ inputs.outputFile }}
+          path: ${{ inputs.outputPath }}
 
-      - name: Read Metadata
+      - name: Display Metadata
         run: |
-          cat ${{ inputs.path }}/${{ inputs.artifact }}
+          cat ${{ inputs.outputPath }}/${{ inputs.outputFile }}
