--- a/.github/workflows/writeMetadata.yml
+++ b/.github/workflows/writeMetadata.yml
@@ -26,20 +26,21 @@ jobs:
 
       - name: Bump Artifact Version
         run: |
+          echo $GITHUB_REF
           case ${{ inputs.inputFile }} in
             *.yml|*.yaml)
-              if [ ${{ env.GITHUB_REF }} = '/ref/heads/main' ]; then
+              if [ $GITHUB_REF = '/ref/heads/main' ]; then
                 projectVersion=$(grep -w version ${{ inputs.inputPath }}/${{ inputs.inputFile }} | cut -d ':' -f2 | tr -d ' ",')
                 echo "projectVersion=${projectVersion}"
               else
-                projectVersion=$(grep -w version ${{ inputs.inputPath }}/${{ inputs.inputFile }} | cut -d ':' -f2 | tr -d ' ",')-${{ env.GITHUB_RUN_ID }}
+                projectVersion=$(grep -w version ${{ inputs.inputPath }}/${{ inputs.inputFile }} | cut -d ':' -f2 | tr -d ' ",')-$GITHUB_RUN_ID
               fi
             ;;
             *.json)
-              if [ ${{ env.GITHUB_REF }} = '/ref/heads/main' ]; then
+              if [ $GITHUB_REF = '/ref/heads/main' ]; then
                 projectVersion=$(grep version ${{ inputs.inputPath }}/${{ inputs.inputFile }} | cut -d ':' -f2 | tr -d ' ",')
               else
-                projectVersion=$(grep version ${{ inputs.inputPath }}/${{ inputs.inputFile }} | cut -d ':' -f2 | tr -d ' ",')-${{ env.GITHUB_RUN_ID }}
+                projectVersion=$(grep version ${{ inputs.inputPath }}/${{ inputs.inputFile }} | cut -d ':' -f2 | tr -d ' ",')-$GITHUB_RUN_ID
               fi
             ;;
           esac
