--- a/.github/workflows/writeMetadata.yml
+++ b/.github/workflows/writeMetadata.yml
@@ -26,10 +26,10 @@ jobs:
 
       - name: Bump Artifact Version
         run: |
-          echo $GITHUB_REF
+          echo $GITHUB_REF_NAME
           case ${{ inputs.inputFile }} in
             *.yml|*.yaml)
-              if [ $GITHUB_REF = '/ref/heads/main' ]; then
+              if [ $GITHUB_REF_NAME = main ]; then
                 projectVersion=$(grep -w version ${{ inputs.inputPath }}/${{ inputs.inputFile }} | cut -d ':' -f2 | tr -d ' ",')
                 echo "projectVersion=${projectVersion}"
               else
@@ -37,7 +37,7 @@ jobs:
               fi
             ;;
             *.json)
-              if [ $GITHUB_REF = '/ref/heads/main' ]; then
+              if [ $GITHUB_REF_NAME = main ]; then
                 projectVersion=$(grep version ${{ inputs.inputPath }}/${{ inputs.inputFile }} | cut -d ':' -f2 | tr -d ' ",')
               else
                 projectVersion=$(grep version ${{ inputs.inputPath }}/${{ inputs.inputFile }} | cut -d ':' -f2 | tr -d ' ",')-$GITHUB_RUN_ID
@@ -45,7 +45,12 @@ jobs:
             ;;
           esac
           projectName=$(grep name ${{ inputs.inputPath }}/${{ inputs.inputFile }} | cut -d ':' -f2 | tr -d ' ",')
-          echo "projectName${projectName}" >> ${{ inputs.outputPath }}/${{ inputs.outputFile }}
+
+          if [ ! -d ${{ inputs.outputPath }} ]; then
+            mkdir ${{ inputs.outputPath }}
+          fi
+
+          echo "projectName=${projectName}" >> ${{ inputs.outputPath }}/${{ inputs.outputFile }}
           echo "projectVersion=${projectVersion}" >> ${{ inputs.outputPath }}/${{ inputs.outputFile }}
 
       - name: Upload Artifact
