--- a/.github/workflows/writeMetadata.yml
+++ b/.github/workflows/writeMetadata.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Bump Artifact Version
         run: |
-          echo $GITHUB_REF_NAME
+          echo $GITHUB_HEAD_REF
           case ${{ inputs.inputFile }} in
             *.yml|*.yaml)
               if [ $GITHUB_REF_NAME = main ]; then
