--- a/.github/workflows/dockerBuild.yml
+++ b/.github/workflows/dockerBuild.yml
@@ -33,7 +33,6 @@ jobs:
           echo $projectName
           echo $projectVersion
 
-jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -43,4 +42,4 @@ jobs:
 
       - name: Build Code
         run: |
-          docker build -t="test" -f ${{ inputs.dockerfilePath }} .
+          docker build -t="$GITHUB_REPOSITORY_OWNER/$projectName:$projectVersion" -f ${{ inputs.dockerfilePath }} .
