--- a/.github/workflows/dockerBuild.yml
+++ b/.github/workflows/dockerBuild.yml
@@ -24,10 +24,10 @@ jobs:
       - name: Download file
         uses: actions/download-artifact@v1
         with:
-          name: ${{ inputs.outputFile }}
-          path: ${{ inputs.outputPath }}
+          name: metadata-$GITHUB_RUN_ID.sh
+          path: metadata
 
       - name: Build Image
         run: |
-          source ${{ inputs.outputPath }}/${{ inputs.outputFile }}
+          source metadata/metadata-$GITHUB_RUN_ID.sh
           docker build -t="${GITHUB_REPOSITORY_OWNER,,}/$projectName:$projectVersion" -f ${{ inputs.dockerfilePath }} .
