--- a/.github/workflows/readMetadata.yml
+++ b/.github/workflows/readMetadata.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Download file
         uses: actions/download-artifact@v1
         with:
-          name: ${{ inputs.outputFile }}
-          path: ${{ inputs.outputPath }}
+          name: metadata-$$GITHUB_RUN_ID.sh
+          path: metadata
 
       - name: Display Metadata
         run: |
-          cat ${{ inputs.outputPath }}/${{ inputs.outputFile }}
+          cat metadata/metadata-$$GITHUB_RUN_ID.sh
