--- a/.github/workflows/dockerBuild.yml
+++ b/.github/workflows/dockerBuild.yml
@@ -1,5 +1,5 @@
 ---
-name: Docker Build
+name: Docker Build and Publish
 'on':
   workflow_call:
     inputs:
@@ -8,7 +8,7 @@ name: Docker Build
         type: string
 
 jobs:
-  docker-build:
+  docker-build-publish:
     name: Build Docker Image
     runs-on: ubuntu-latest
     steps:
@@ -21,7 +21,18 @@ jobs:
           name: metadata.sh
           path: metadata
 
-      - name: Build Image
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build Docker Image
         run: |
           source metadata/metadata.sh
           docker build -t="${GITHUB_REPOSITORY_OWNER,,}/$projectName:$projectVersion" -f ${{ inputs.dockerfilePath }} .
+
+      - name: Publish Docker Image
+        run: |
+          source metadata/metadata.sh
+          docker push ${GITHUB_REPOSITORY_OWNER,,}/$projectName:$projectVersion
