--- a/.github/workflows/dockerBuild.yml
+++ b/.github/workflows/dockerBuild.yml
@@ -6,6 +6,13 @@ name: Docker Build and Publish
       dockerfilePath:
         required: true
         type: string
+    secrets:
+      username:
+        description: 'The Docker Hub Username'
+        required: true
+      token:
+        description: 'The Docker Hub Password'
+        required: true
 
 jobs:
   docker-build-publish:
@@ -24,8 +31,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.username }}
+          password: ${{ secrets.password }}
 
       - name: Build Docker Image
         run: |
