--- a/.github/workflows/writeMetadata.yml
+++ b/.github/workflows/writeMetadata.yml
@@ -23,25 +23,25 @@ jobs:
           case ${{ inputs.metadataFile }} in
             *.yml|*.yaml)
               if [ $GITHUB_REF_NAME = main ]; then
-                projectVersion=$(grep -w version ${{ inputs.metadataPath }}/${{ inputs.metadataFile }} | cut -d ':' -f2 | tr -d ' ",')
-                echo "projectVersion=${projectVersion}"
+                PROJECT_VERSION=$(grep -w version ${{ inputs.metadataPath }}/${{ inputs.metadataFile }} | cut -d ':' -f2 | tr -d ' ",')
+                echo "PROJECT_VERSION=${PROJECT_VERSION}"
               else
-                projectVersion=$(grep -w version ${{ inputs.metadataPath }}/${{ inputs.metadataFile }} | cut -d ':' -f2 | tr -d ' ",')-$GITHUB_RUN_ID
+                PROJECT_VERSION=$(grep -w version ${{ inputs.metadataPath }}/${{ inputs.metadataFile }} | cut -d ':' -f2 | tr -d ' ",')-$GITHUB_RUN_ID
               fi
             ;;
             *.json)
               if [ $GITHUB_REF_NAME = main ]; then
-                projectVersion=$(grep version ${{ inputs.metadataPath }}/${{ inputs.metadataFile }} | cut -d ':' -f2 | tr -d ' ",')
+                PROJECT_VERSION=$(grep version ${{ inputs.metadataPath }}/${{ inputs.metadataFile }} | cut -d ':' -f2 | tr -d ' ",')
               else
-                projectVersion=$(grep version ${{ inputs.metadataPath }}/${{ inputs.metadataFile }} | cut -d ':' -f2 | tr -d ' ",')-$GITHUB_RUN_ID
+                PROJECT_VERSION=$(grep version ${{ inputs.metadataPath }}/${{ inputs.metadataFile }} | cut -d ':' -f2 | tr -d ' ",')-$GITHUB_RUN_ID
               fi
             ;;
           esac
-          projectName=$(grep name ${{ inputs.metadataPath }}/${{ inputs.metadataFile }} | cut -d ':' -f2 | tr -d ' ",')
+          PROJECT_NAME=$(grep name ${{ inputs.metadataPath }}/${{ inputs.metadataFile }} | cut -d ':' -f2 | tr -d ' ",')
 
           mkdir metadata
-          echo "projectName=${projectName}" >> metadata/metadata.sh
-          echo "projectVersion=${projectVersion}" >> metadata/metadata.sh
+          echo "PROJECT_NAME=${PROJECT_NAME}" >> metadata/metadata.sh
+          echo "PROJECT_VERSION=${PROJECT_VERSION}" >> metadata/metadata.sh
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
