--- a/.github/workflows/writeMetadata.yml
+++ b/.github/workflows/writeMetadata.yml
@@ -45,10 +45,17 @@ jobs:
           MINOR_VERSION=$(echo ${PROJECT_VERSION} | cut -d '.' -f2)
           PATCH_VERSION=$(echo ${PROJECT_VERSION} | cut -d '.' -f3)
 
+          echo ${MAJOR_VERSION}
+          echo ${MINOR_VERSION}
+          echo ${PATCH_VERSION}
+
           # Auto-Bumping relies on a commit message naming convention, starting with the change type.
           # Example "feat: I added something cool"
-          GIT_COMMIT=$($(git log -1 --oneline | cut -d ' ' -f1)
+          GIT_COMMIT=$(git log -1 --oneline | cut -d ' ' -f1)
           GIT_COMMIT_TYPE=$(git log -1 --oneline | cut -d ' ' -f2)
+
+          echo ${GIT_COMMIT}
+          echo ${GIT_COMMIT_TYPE}
 
           # A small number of commit types for now
           case "${GIT_COMMIT_TYPE}" in
