--- a/.github/workflows/writeMetadata.yml
+++ b/.github/workflows/writeMetadata.yml
@@ -51,9 +51,11 @@ jobs:
 
           # Auto-Bumping relies on a commit message naming convention, starting with the change type.
           # Example "feat: I added something cool"
+          GIT_FULL_MESSAGE=$(git log -1 --oneline)
           GIT_COMMIT=$(git log -1 --oneline | cut -d ' ' -f1)
           GIT_COMMIT_TYPE=$(git log -1 --oneline | cut -d ' ' -f2)
 
+          echo ${GIT_FULL_MESSAGE}
           echo ${GIT_COMMIT}
           echo ${GIT_COMMIT_TYPE}
 
