--- a/.github/workflows/writeMetadata.yml
+++ b/.github/workflows/writeMetadata.yml
@@ -51,7 +51,7 @@ jobs:
 
           # Auto-Bumping relies on a commit message naming convention, starting with the change type.
           # Example "feat: I added something cool"
-          GIT_FULL_MESSAGE=$(git log -1 --oneline)
+          GIT_FULL_MESSAGE=$(git log)
           GIT_COMMIT=$(git log -1 --oneline | cut -d ' ' -f1)
           GIT_COMMIT_TYPE=$(git log -1 --oneline | cut -d ' ' -f2)
 
