--- a/.github/workflows/writeMetadata.yml
+++ b/.github/workflows/writeMetadata.yml
@@ -44,6 +44,9 @@ jobs:
           MAJOR_VERSION=$(echo ${PROJECT_VERSION} | cut -d '.' -f1)
           MINOR_VERSION=$(echo ${PROJECT_VERSION} | cut -d '.' -f2)
           PATCH_VERSION=$(echo ${PROJECT_VERSION} | cut -d '.' -f3)
+          CURRENT_VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
+
+          echo "CURRENT_VERSION=${CURRENT_VERSION}" >> metadata/metadata.sh
 
           echo ${MAJOR_VERSION}
           echo ${MINOR_VERSION}
@@ -77,11 +80,11 @@ jobs:
             ;;
           esac
 
-          FINAL_VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
+          FUTURE_VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
 
           mkdir metadata
           echo "PROJECT_NAME=${PROJECT_NAME}" >> metadata/metadata.sh
-          echo "FINAL_VERSION=${PROJECT_VERSION}" >> metadata/metadata.sh
+          echo "FUTURE_VERSION=${PROJECT_VERSION}" >> metadata/metadata.sh
           echo "GIT_COMMIT=${GIT_COMMIT}" >> metadata/metadata.sh
 
       - name: Upload Artifact
