--- a/.github/workflows/writeMetadata.yml
+++ b/.github/workflows/writeMetadata.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Bump Artifact Version
         run: |
           # Gather the project metadata from the referenced metadata file
+          # Use current version for RCs and next tag
+          # Use current version for CHANGELOG update
+          # Use future version at very end just to bump in metadata and set it for the next development cycle
           case ${{ inputs.metadataFile }} in
             *.yml|*.yaml)
               if [ $GITHUB_REF_NAME = main ]; then
@@ -46,6 +49,7 @@ jobs:
           PATCH_VERSION=$(echo ${PROJECT_VERSION} | cut -d '.' -f3)
           CURRENT_VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
 
+          mkdir metadata
           echo "CURRENT_VERSION=${CURRENT_VERSION}" >> metadata/metadata.sh
 
           echo ${MAJOR_VERSION}
@@ -82,7 +86,6 @@ jobs:
 
           FUTURE_VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
 
-          mkdir metadata
           echo "PROJECT_NAME=${PROJECT_NAME}" >> metadata/metadata.sh
           echo "FUTURE_VERSION=${PROJECT_VERSION}" >> metadata/metadata.sh
           echo "GIT_COMMIT=${GIT_COMMIT}" >> metadata/metadata.sh
