Capitalize the sourcing of metadata for cleaner synxtax

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,6 @@ name: CI
 
 jobs:
   yaml-lint:
-    uses: GrabAByte/github-devops-workflows/.github/workflows/yamlLint.yml@feat/inputs
+    uses: GrabAByte/github-devops-workflows/.github/workflows/yamlLint.yml@main
     with:
       yamlPath: '.'
