--- a/.github/workflows/writeMetadata.yml
+++ b/.github/workflows/writeMetadata.yml
@@ -20,6 +20,10 @@ jobs:
 
       - name: Bump Artifact Version
         run: |
+          # Gather the project metadata from the referenced metadata file
+          # Use current version for RCs and next tag
+          # Use current version for CHANGELOG update
+          # Use future version at very end just to bump in metadata and set it for the next development cycle
           case ${{ inputs.metadataFile }} in
             *.yml|*.yaml)
               if [ $GITHUB_REF_NAME = main ]; then
@@ -39,9 +43,52 @@ jobs:
           esac
           PROJECT_NAME=$(grep name ${{ inputs.metadataPath }}/${{ inputs.metadataFile }} | cut -d ':' -f2 | tr -d ' ",')
 
+          # Gathering the version by each octet
+          MAJOR_VERSION=$(echo ${PROJECT_VERSION} | cut -d '.' -f1)
+          MINOR_VERSION=$(echo ${PROJECT_VERSION} | cut -d '.' -f2)
+          PATCH_VERSION=$(echo ${PROJECT_VERSION} | cut -d '.' -f3)
+          CURRENT_VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
+
           mkdir metadata
+          echo "CURRENT_VERSION=${CURRENT_VERSION}" >> metadata/metadata.sh
+
+          echo ${MAJOR_VERSION}
+          echo ${MINOR_VERSION}
+          echo ${PATCH_VERSION}
+
+          # Auto-Bumping relies on a commit message naming convention, starting with the change type.
+          # Example "feat: I added something cool"
+          GIT_COMMIT=$(git log -1 --oneline | cut -d ' ' -f1)
+          GIT_COMMIT_TYPE=$(git log -1 --oneline | cut -d ' ' -f2)
+
+          echo ${GIT_COMMIT}
+          echo ${GIT_COMMIT_TYPE}
+
+          # A small number of commit types for now
+          case "${GIT_COMMIT_TYPE}" in
+            breaking*)
+              MAJOR_VERSION=$(( $(echo ${MAJOR_VERSION} | cut -d '.' -f1) + 1 ))
+            ;;
+            feat*)
+              MINOR_VERSION=$(( $(echo ${MINOR_VERSION} | cut -d '.' -f2) + 1 ))
+            ;;
+            fix*|chore*|docs*)
+              PATCH_VERSION=$(( $(echo ${PATCH_VERSION} | cut -d '.' -f2) + 1 ))
+            ;;
+            Merge*)
+              :
+            ;;
+            *)
+             echo "Pipeline Aborted: Please follow the commit message naming convention. All commit messages must start with breaking, feat, fix, chore or docs"
+             exit 1
+            ;;
+          esac
+
+          FUTURE_VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
+
           echo "PROJECT_NAME=${PROJECT_NAME}" >> metadata/metadata.sh
-          echo "PROJECT_VERSION=${PROJECT_VERSION}" >> metadata/metadata.sh
+          echo "FUTURE_VERSION=${PROJECT_VERSION}" >> metadata/metadata.sh
+          echo "GIT_COMMIT=${GIT_COMMIT}" >> metadata/metadata.sh
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
