--- a/.github/workflows/updateVersion.yml
+++ b/.github/workflows/updateVersion.yml
@@ -38,6 +38,8 @@ jobs:
           sed -i "s/${CURRENT_VERSION}/${FUTURE_VERSION}/" ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}
 
           # Commit back to mainline with updates
+          git config --global user.name "grababyte"
+          git congit --global user.email "grababyte@github.com"
           git add CHANGELOG.md ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}
           git commit -m "github pipeline: automated version bump to from ${CURRENT_VERSION} to ${FUTURE_VERSION}"
           git push
