--- a/.github/workflows/updateVersion.yml
+++ b/.github/workflows/updateVersion.yml
@@ -6,6 +6,12 @@ name: Update Version
       - main
   workflow_call:
     inputs:
+      gitUsernmae:
+        required: true
+        type: string
+      gitEmail:
+        required: true
+        type: string
       metadataFile:
         required: true
         type: string
@@ -38,8 +44,8 @@ jobs:
           sed -i "s/${CURRENT_VERSION}/${FUTURE_VERSION}/" ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}
 
           # Commit back to mainline with updates
-          git config --global user.name "grababyte"
-          git congit --global user.email "grababyte@github.com"
+          git config --global user.name "${{ inputs.gitUsername}}"
+          git config --global user.email "${{ inputs.gitEmail }}"
           git add CHANGELOG.md ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}
           git commit -m "github pipeline: automated version bump to from ${CURRENT_VERSION} to ${FUTURE_VERSION}"
           git push
