--- a/.github/workflows/dockerBuild.yml
+++ b/.github/workflows/dockerBuild.yml
@@ -36,10 +36,10 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          source metadata/metadata.sh
+          source metadata/version.sh
           docker build -t="${GITHUB_REPOSITORY_OWNER,,}/${PROJECT_NAME}:${CURRENT_VERSION}" -f ${{ inputs.dockerfilePath }} .
 
       - name: Publish Docker Image
         run: |
-          source metadata/metadata.sh
+          source metadata/version.sh
           docker push ${GITHUB_REPOSITORY_OWNER,,}/${PROJECT_NAME}:${CURRENT_VERSION}
