--- a/.github/workflows/updateVersion.yml
+++ b/.github/workflows/updateVersion.yml
@@ -44,9 +44,11 @@ jobs:
           echo "${CURRENT_VERSION} to ${FUTURE_VERSION} in file ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}"
           sed -i "s/${CURRENT_VERSION}/${FUTURE_VERSION}/" ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}
 
-          # Commit back to mainline with updates
-          git config --global user.name "${{ inputs.gitUsername }}"
-          git config --global user.email "${{ inputs.gitEmail }}"
-          git add CHANGELOG.md ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}
-          git commit -m "github pipeline: automated version bump to from ${CURRENT_VERSION} to ${FUTURE_VERSION}"
-          git push
+          # Commit back to mainline with updates, if there are changes
+          if [[ -z $(git status is) ]]; then
+            git config --global user.name "${{ inputs.gitUsername }}"
+            git config --global user.email "${{ inputs.gitEmail }}"
+            git add CHANGELOG.md ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}
+            git commit -m "github pipeline: automated version bump to from ${CURRENT_VERSION} to ${FUTURE_VERSION}"
+            git push
+          fi
