--- a/.github/workflows/dockerBuild.yml
+++ b/.github/workflows/dockerBuild.yml
@@ -17,8 +17,8 @@ name: Docker Build and Publish
 jobs:
   docker-build-publish:
     name: Build Docker Image
-    runs-on: ubuntu-latest
     environment: CI
+    runs-on: ubuntu-latest
     steps:
       - name: Check out the codebase
         uses: actions/checkout@v2
@@ -26,7 +26,7 @@ jobs:
       - name: Download file
         uses: actions/download-artifact@v1
         with:
-          name: metadata.sh
+          name: version.sh
           path: metadata
 
       - name: Login to DockerHub
@@ -37,10 +37,10 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          source metadata/metadata.sh
+          source metadata/version.sh
           docker build -t="${GITHUB_REPOSITORY_OWNER,,}/${PROJECT_NAME}:${CURRENT_VERSION}" -f ${{ inputs.dockerfilePath }} .
 
       - name: Publish Docker Image
         run: |
-          source metadata/metadata.sh
+          source metadata/version.sh
           docker push ${GITHUB_REPOSITORY_OWNER,,}/${PROJECT_NAME}:${CURRENT_VERSION}
