--- a/.github/workflows/getVersion.yml
+++ b/.github/workflows/getVersion.yml
@@ -50,7 +50,7 @@ jobs:
           CURRENT_VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
 
           mkdir metadata
-          echo "CURRENT_VERSION=${CURRENT_VERSION}" >> metadata/version.sh
+          echo "CURRENT_VERSION=0.0.0" >> metadata/version.sh
 
           echo ${MAJOR_VERSION}
           echo ${MINOR_VERSION}
